feat(task): put
put end point added to open api yaml file.
