# target/generated-sources/src/main/java/uk/gov/hmcts/taskmanager/api/controller/TaskManagementSystemApiDelegate.java
@@ -6,6 +6,7 @@ import uk.gov.hmcts.taskmanager.domain.ErrorResponse;
 import uk.gov.hmcts.taskmanager.domain.SuccessResponse;
 import uk.gov.hmcts.taskmanager.domain.Task;
 import uk.gov.hmcts.taskmanager.domain.TaskResponse;
+import uk.gov.hmcts.taskmanager.domain.UpdateStatusRequest;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
@@ -24,7 +25,7 @@ import java.util.Map;
  * A delegate to be called by the {@link TaskManagementSystemApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T12:11:19.710409+01:00[Europe/London]")
+@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T13:06:35.610180400+01:00[Europe/London]")
 public interface TaskManagementSystemApiDelegate {
 
     /**
@@ -42,5 +43,11 @@ public interface TaskManagementSystemApiDelegate {
      * @see TaskManagementSystemApi#getTasks
      */
     ResponseEntity<TaskResponse> getTasks( String  transactionId);
+
+    /**
+     * @see TaskManagementSystemApi#updateStatus
+     */
+    ResponseEntity<SuccessResponse> updateStatus( String  transactionId,
+         UpdateStatusRequest  body);
 
 }
