# target/generated-sources/src/main/java/uk/gov/hmcts/taskmanager/domain/UpdateStatusRequest.java
@@ -4,51 +4,62 @@ import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.v3.oas.annotations.media.Schema;
-import java.util.ArrayList;
-import java.util.List;
-import uk.gov.hmcts.taskmanager.domain.Task;
 import org.springframework.validation.annotation.Validated;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.*;
 
 /**
- * TaskResponse
+ * UpdateStatusRequest
  */
 @Validated
 @jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T13:06:35.610180400+01:00[Europe/London]")
 
 
-public class TaskResponse   {
-  @JsonProperty("tasks")
-  @Valid
-  private List<Task> tasks = null;
+public class UpdateStatusRequest   {
+  @JsonProperty("id")
+  private Long id = null;
 
-  public TaskResponse tasks(List<Task> tasks) {
-    this.tasks = tasks;
-    return this;
-  }
+  @JsonProperty("status")
+  private String status = null;
 
-  public TaskResponse addTasksItem(Task tasksItem) {
-    if (this.tasks == null) {
-      this.tasks = new ArrayList<Task>();
-    }
-    this.tasks.add(tasksItem);
+  public UpdateStatusRequest id(Long id) {
+    this.id = id;
     return this;
   }
 
   /**
-   * Get tasks
-   * @return tasks
+   * Get id
+   * @return id
+   **/
+  @Schema(example = "10", description = "")
+      @NotNull
+
+    public Long getId() {
+    return id;
+  }
+
+  public void setId(Long id) {
+    this.id = id;
+  }
+
+  public UpdateStatusRequest status(String status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * Get status
+   * @return status
    **/
   @Schema(description = "")
       @NotNull
-    @Valid
-  @Size(max=999)   public List<Task> getTasks() {
-    return tasks;
+
+    public String getStatus() {
+    return status;
   }
 
-  public void setTasks(List<Task> tasks) {
-    this.tasks = tasks;
+  public void setStatus(String status) {
+    this.status = status;
   }
 
 
@@ -60,21 +71,23 @@ public class TaskResponse   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    TaskResponse taskResponse = (TaskResponse) o;
-    return Objects.equals(this.tasks, taskResponse.tasks);
+    UpdateStatusRequest updateStatusRequest = (UpdateStatusRequest) o;
+    return Objects.equals(this.id, updateStatusRequest.id) &&
+        Objects.equals(this.status, updateStatusRequest.status);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(tasks);
+    return Objects.hash(id, status);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class TaskResponse {\n");
+    sb.append("class UpdateStatusRequest {\n");
     
-    sb.append("    tasks: ").append(toIndentedString(tasks)).append("\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
     sb.append("}");
     return sb.toString();
   }
